ckanext/theme/fanstatic/theme.css
body {
  background: white;
}
body, h1, h2, h3, h4, .btn {
  font-family: 'Lato', sans-serif;
}
[role=main] {
  background: white;
  border-top: 1px solid rgb(15, 67, 149);
}
.nav-frame {
  width: 100%;
  height: 140px;
  border: none;
  overflow: hidden;
  background: white;
}
.wrapper {
  border: none;
  border-radius: 0;
  box-shadow: none;
  -webkit-box-shadow: none;
}
.wrapper:before {
  border: none;
}

.icon-globe:after {
  content: '\f23a';
  font: normal normal normal 14px/1 FontAwesome;
}

.no-nav > .col-sm-9 {
  width: 100%;
}

/* Home page */
.homepage .module-search {
  margin: 0 7em;
}
.homepage .tags {
  display: none;
}
.homepage .module-search .module-content {
  border-radius: 3px;
  background: #0F4395;
}

.homepage .media-grid {
  margin: 3em 7em;
  border: 0;
  border-radius: 4px;
}
.homepage .media-item {
  max-width: 12.25em;
  height: 10em;
}
.homepage .media-view:focus,
.homepage .media-view:hover {
  border-color: #0F4395;
  box-shadow: 0 0 0 4px rgba(15, 67, 149, 0.5);
}

/* Header/Footer */
.masthead {
  background: transparent;
  border: none;
  padding: 0;
}
.masthead .nav li a {
  color: #0F4395;
}
.masthead .nav li.active a,
.masthead .nav li a:hover {
  color: white;
  background: #0F4395 !important;
}
.site-footer {
  background: #0F4395;
}
.site-footer a,
.site-footer label,
.site-footer p {
  color: white;
}
[role=main] {
  border-top-width: 0;
}

.dataset-item {
    border: none;
    border-left: 3px solid #82c506;
    padding: 10px 10px !important;
    margin-bottom: 35px;
    position: relative;
}

.dataset-item-content {
    display: inline-block;
    vertical-align: top;
}

.dataset-item-content .dataset-heading {
    text-overflow:ellipsis;
    overflow-x:hidden;
    white-space:nowrap;
    width: calc(100% - 50px);
}

.dataset-item-content.text {
    width: calc(100% - 145px);
    padding-left: 20px;
}

.dataset-resources {
    padding-left: 0;
}

/*** Image dataset  ***/
.dataset-item-content.image {
    height: 140px;
    width: 140px;
    text-align: center;
    white-space: nowrap;
    margin-left: auto;
    margin-right: auto;
}
.dataset-item-content.image:before {
    content: "";
    display: inline-block;
    height: 100%;
    vertical-align: middle;
}
.dataset-item-content.image img.dataset-thematic {
    /* clip-path: inset(0px 0px 130px 0px); */
    margin-top: 25%;
}
.dataset-item-content.image img.dataset-thumbnail {
    vertical-align: middle;
    max-height: 100%;
    max-width: 100%;
}

/*** Tags clickables - Type de donnees ***/
.label {
  margin-right: .5em;
}
.label[data-format=donnees-ouvertes] {
    background-color: #FF6660;
}
.label[data-format=donnees-geographiques] {
    background-color: #0072bc;
}
.label[data-format=donnees-intelligentes] {
    background-color: #FFBA13;
}

.dataset-format a {
    background: #0072bc !important;
}

.module-heading {
  color: rgb(15, 67, 149);
  border-top-color: white;
  background: white;
  border-bottom: 2px solid rgb(15, 67, 149);
}


/*/*** Tag tracking_summary - Ressources ***/*/
/*.label.label-tracking {*/
/*    background: #fbb900;*/
/*    color: #000000;*/
/*}*/

/*#dataset-search-form .form_search, #dataset-search-form .form_search .field {*/
/*    background: none;*/
/*    margin: 0;*/
/*}*/

/*#dataset-map {*/
/*    margin-bottom: 15px;*/
/*}*/

/*.filters .badge {*/
/*    background-color: #0072bc;*/
/*    font-style: normal;*/
/*    line-height: 1em;*/
/*    font-size: 1em;*/
/*    padding: 0 0 2px 0;*/
/*    display: flex;*/
/*    margin: 0 0 0 10px;*/
/*    width:1.2em;*/
/*    align-items: center;*/
/*    justify-content: center;*/
/*    height: 1.2em;*/
/*}*/

/* needed ? */
.media-grid {
    height: auto !important;
    justify-content: center;
    padding-top: 0;
}

.media-item {
    position: relative !important;
    left: auto !important;
    top: auto !important;
    max-width: 174px;
    text-align: center;
    height: 14em;
}
.media-item .img-responsive {
   display: inline-block;
}

